--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,13 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
+    android:width="17dp"
+    android:height="18dp"
+    android:viewportWidth="17"
+    android:viewportHeight="18">
   <group>
     <clip-path
-        android:pathData="M0,0h36v36h-36z"/>
+        android:pathData="M0,1.214l15.994,-0.423l0.423,15.994l-15.994,0.423z"/>
     <path
-        android:pathData="M23.779,24.84C21.255,27.115 17.913,28.5 14.25,28.5C6.385,28.5 0,22.115 0,14.25C0,6.385 6.385,0 14.25,0C22.115,0 28.5,6.385 28.5,14.25C28.5,17.913 27.115,21.255 24.84,23.779L36,34.939L34.939,36L23.779,24.84ZM14.25,1.5C21.287,1.5 27,7.214 27,14.25C27,21.287 21.287,27 14.25,27C7.214,27 1.5,21.287 1.5,14.25C1.5,7.214 7.214,1.5 14.25,1.5Z"
+        android:pathData="M10.857,11.971C9.762,13.012 8.293,13.666 6.666,13.709C3.172,13.801 0.26,11.039 0.167,7.545C0.075,4.051 2.837,1.139 6.331,1.047C9.825,0.955 12.737,3.717 12.83,7.211C12.873,8.838 12.297,10.339 11.315,11.488L16.405,16.315L15.946,16.798L10.857,11.971ZM6.349,1.713C9.475,1.631 12.08,4.102 12.163,7.228C12.246,10.354 9.774,12.96 6.648,13.043C3.522,13.125 0.916,10.654 0.834,7.528C0.751,4.401 3.222,1.796 6.349,1.713Z"
         android:fillColor="#000000"
         android:fillType="evenOdd"/>
   </group>
