--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TechStore" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <!--<item name="bottomNavigationViewStyle">
+            <style>
+                <item name="selectedIconTint">@color/F7F7F7</item>
+            </style>
+        </item>-->
+
     </style>
 
-    <style name="Theme.TechStore" parent="Base.Theme.TechStore" />
+
+    <style name="Theme.TechStore" parent="AppTheme" />
+
 </resources>
