--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -9,169 +9,220 @@
     android:orientation="vertical"
     android:background="@color/background">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
-            tools:ignore="UseCompoundDrawables,UselessParent">
+            android:id="@+id/item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back"
-                tools:ignore="ContentDescription" />
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="15dp"
+                tools:ignore="UseCompoundDrawables,UselessParent">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_back"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/back"
+                    android:textSize="16sp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/montserrat"/>
+
+            </LinearLayout>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:scaleType="center"
+                android:background="@color/white"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"/>
+
+            <me.relex.circleindicator.CircleIndicator3
+                android:id="@+id/dots"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"
+                app:ci_width="36dp"
+                app:ci_height="4dp"
+                app:ci_margin="15dp"
+                app:ci_drawable="@drawable/active_dot_view"
+                app:ci_drawable_unselected="@drawable/non_active_dot_view"/>
 
             <TextView
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/back"
-                android:textSize="16sp"
-                android:layout_gravity="center"
+                android:text="@string/app_name"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="15dp"
                 android:textColor="@color/black"
+                android:fontFamily="@font/montserrat"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/price"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:fontFamily="@font/montserrat"
+                android:textSize="20sp"/>
+
+            <!-- <View
+                 android:layout_width="match_parent"
+                 android:layout_height="1dp"
+                 android:layout_margin="15dp"
+                 android:background="@color/black"/>
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="@string/color"
+                 android:layout_marginStart="15dp"
+                 android:textColor="@color/black"
+                 android:fontFamily="@font/montserrat"
+                 android:textSize="20sp"/>
+
+             <androidx.recyclerview.widget.RecyclerView
+                 android:id="@+id/recycler_color"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="10dp"
+                 android:orientation="horizontal"
+                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                 tools:ignore="SpeakableTextPresentCheck"
+                 tools:itemCount="3"
+                 tools:listitem="@layout/select_item_oval" />
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="@string/color"
+                 android:layout_marginStart="15dp"
+                 android:layout_marginTop="10dp"
+                 android:textColor="@color/black"
+                 android:fontFamily="@font/montserrat"
+                 android:textSize="20sp"/>
+
+             <androidx.recyclerview.widget.RecyclerView
+                 android:id="@+id/recycler_memory"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginStart="10dp"
+                 android:orientation="horizontal"
+                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                 tools:ignore="SpeakableTextPresentCheck"
+                 tools:itemCount="3"
+                 tools:listitem="@layout/select_item_rectangle" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="15dp"
+                android:background="@color/black"/>-->
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="@drawable/action_button"
+                android:layout_marginHorizontal="15dp"
+                android:text="@string/add"
+                android:textColor="@color/white"
+                android:fontFamily="@font/montserrat"/>
+
+            <!--<androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:ignore="SpeakableTextPresentCheck"
+                tools:itemCount="3"
+                tools:listitem="@layout/characteristic_item" />-->
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="15dp"
+                android:background="@color/black"/>
+
+            <TextView
+                android:id="@+id/info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_marginHorizontal="15dp"
+                android:layout_gravity="center"
+                android:textColor="@color/grey_text"
                 android:fontFamily="@font/montserrat"/>
 
         </LinearLayout>
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewpager"
+        <LinearLayout
+            android:id="@+id/fullView"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:scaleType="center"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"/>
-
-        <me.relex.circleindicator.CircleIndicator3
-            android:id="@+id/dots"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
             android:layout_gravity="center"
-            app:ci_width="36dp"
-            app:ci_height="4dp"
-            app:ci_margin="15dp"
-            app:ci_drawable="@drawable/active_dot_view"
-            app:ci_drawable_unselected="@drawable/non_active_dot_view"/>
+            android:background="@color/white">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
-            android:textSize="20sp"/>
+            <ImageButton
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="20dp"
+                android:backgroundTint="#00FFFFFF"
+                android:src="@drawable/ic_close" />
 
-        <TextView
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/price"
-            android:layout_marginStart="15dp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:fontFamily="@font/montserrat"
-            android:textSize="20sp"/>
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpager2"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_gravity="center"
+                android:scaleType="center"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"/>
 
-       <!-- <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_margin="15dp"
-            android:background="@color/black"/>
+            <me.relex.circleindicator.CircleIndicator3
+                android:id="@+id/dots2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"
+                app:ci_width="36dp"
+                app:ci_height="4dp"
+                app:ci_margin="15dp"
+                app:ci_drawable="@drawable/active_dot_view"
+                app:ci_drawable_unselected="@drawable/non_active_dot_view"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/color"
-            android:layout_marginStart="15dp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
-            android:textSize="20sp"/>
+        </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_color"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
-            tools:listitem="@layout/select_item_oval" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/color"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
-            android:textSize="20sp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_memory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
-            tools:listitem="@layout/select_item_rectangle" />-->
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_margin="15dp"
-            android:background="@color/black"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:background="@drawable/action_button"
-            android:layout_marginHorizontal="15dp"
-            android:text="@string/add"
-            android:textColor="@color/white"
-            android:fontFamily="@font/montserrat"/>
-
-        <!--<androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
-            tools:listitem="@layout/characteristic_item" />-->
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_margin="15dp"
-            android:background="@color/black"/>
-
-        <TextView
-            android:id="@+id/info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:layout_marginHorizontal="15dp"
-            android:layout_gravity="center"
-            android:textColor="@color/grey_text"
-            android:fontFamily="@font/montserrat"/>
-
-    </LinearLayout>
+    </FrameLayout>
 
 </androidx.core.widget.NestedScrollView>
