--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -100,7 +100,7 @@
             android:fontFamily="@font/montserrat"
             android:textSize="20sp"/>
 
-        <androidx.recyclerview.widget.RecyclerView
+        <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_contact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -110,7 +110,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:ignore="SpeakableTextPresentCheck"
             tools:itemCount="3"
-            tools:listitem="@layout/text_input_item" />
+            tools:listitem="@layout/text_input_item" />-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -144,7 +144,7 @@
             android:fontFamily="@font/montserrat"
             android:textSize="20sp"/>
 
-        <androidx.recyclerview.widget.RecyclerView
+        <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:ignore="SpeakableTextPresentCheck"
             tools:itemCount="3"
-            tools:listitem="@layout/text_input_item" />
+            tools:listitem="@layout/text_input_item" />-->
 
         <TextView
             android:layout_width="wrap_content"
