--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,7 @@
             android:background="@color/black"/>
 
         <GridLayout
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp">
@@ -36,7 +37,7 @@
                 android:fontFamily="@font/montserrat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
+                android:text="@string/login"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_gravity="center_vertical"
