--- a/app/src/main/res/layout/characteristic_item.xml
+++ b/app/src/main/res/layout/characteristic_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -18,8 +19,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
+        android:fontFamily="@font/montserrat"
         android:text="@string/app_name"
         android:textColor="@color/grey_text"
-        android:fontFamily="@font/montserrat"/>
+        tools:ignore="TextContrastCheck" />
 
 </LinearLayout>
