--- a/app/src/main/res/layout/select_input_item.xml
+++ b/app/src/main/res/layout/select_input_item.xml
@@ -18,7 +18,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="0dp"
         android:button="@drawable/custom_checkbox"
-        android:gravity="center" />
+        android:gravity="center"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/input"
