--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -173,11 +173,12 @@
                 android:id="@+id/info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:layout_marginHorizontal="15dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="15dp"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/app_name"
                 android:textColor="@color/grey_text"
-                android:fontFamily="@font/montserrat"/>
+                tools:ignore="TextContrastCheck" />
 
         </LinearLayout>
 
@@ -197,7 +198,8 @@
                 android:layout_gravity="end"
                 android:layout_margin="20dp"
                 android:backgroundTint="#00FFFFFF"
-                android:src="@drawable/ic_close" />
+                android:src="@drawable/ic_close"
+                tools:ignore="ContentDescription" />
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewpager2"
