--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -11,15 +12,17 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:src="@drawable/placeholder"
         android:scaleType="center"
-        app:riv_corner_radius="15dp"/>
+        android:src="@drawable/placeholder"
+        app:riv_corner_radius="15dp"
+        tools:ignore="ImageContrastCheck" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:scaleType="center"
         android:src="@drawable/category_bg"
-        android:scaleType="center"/>
+        tools:ignore="ContentDescription,ImageContrastCheck" />
 
     <TextView
         android:id="@+id/text"
