--- a/app/src/main/res/layout/select_item_rectangle.xml
+++ b/app/src/main/res/layout/select_item_rectangle.xml
@@ -12,6 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/item_bg"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription,ImageContrastCheck" />
 
 </LinearLayout>
