--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -85,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/price"
                 android:layout_marginStart="15dp"
+                android:layout_marginBottom="15dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:fontFamily="@font/montserrat"
