--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -10,7 +10,6 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -30,6 +29,14 @@
         app:spanCount="2"
         tools:itemCount="5"
         android:layout_gravity="center_horizontal"
-        tools:listitem="@layout/item_category_more"/>
+        tools:listitem="@layout/item_category"/>
+
+    <ProgressBar
+        android:id="@+id/category_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/black"
+        android:secondaryProgressTint="@color/black"
+        android:indeterminateTint="@color/black" />
 
 </LinearLayout>
