--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -51,6 +51,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/price"
+                    android:visibility="gone"
+                    android:layout_marginEnd="15dp"
                     android:textColor="@color/grey"
                     android:textSize="15sp"
                     tools:ignore="TextContrastCheck" />
@@ -59,7 +61,6 @@
                     android:id="@+id/price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/price"
                     android:textColor="@color/black"
