--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -22,14 +22,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--Strange error-->
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
+        app:queryHint="@string/want_find"
         style="@style/CustomSearchViewStyle"
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_marginStart="125dp"
         android:layout_marginEnd="55dp"
+        app:iconifiedByDefault="false"
         android:searchHintIcon="@drawable/ic_search"
         android:searchIcon="@drawable/ic_search"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
