--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -58,28 +58,6 @@
             android:layout_marginHorizontal="15dp">
 
             <ImageView
-                android:id="@+id/alert_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="0"
-                tools:ignore="ContentDescription"
-                android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/ic_alarm" />
-
-            <TextView
-                android:id="@+id/alert_text"
-                android:fontFamily="@font/montserrat"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/alerts"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"/>
-
-            <ImageView
                 android:id="@+id/wallet_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -109,7 +87,7 @@
                 android:layout_column="0"
                 tools:ignore="ContentDescription"
                 android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/ic_note" />
+                app:srcCompat="@drawable/ic_clock" />
 
             <TextView
                 android:id="@+id/orders_text"
@@ -247,6 +225,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/site"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"/>
+
+            <ImageView
+                android:id="@+id/address_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                tools:ignore="ContentDescription"
+                app:srcCompat="@drawable/ic_location" />
+
+            <TextView
+                android:id="@+id/address_text"
+                android:fontFamily="@font/montserrat"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/stores"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_marginTop="10dp"
