--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -35,20 +35,20 @@
         android:searchIcon="@drawable/ic_search"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/menu"
+        app:layout_constraintEnd_toStartOf="@+id/notification"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
         app:searchHintIcon="@drawable/ic_search"
         app:searchIcon="@drawable/ic_search" />
 
     <ImageButton
-        android:id="@+id/menu"
+        android:id="@+id/notification"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginVertical="10dp"
         android:layout_marginEnd="15dp"
         android:backgroundTint="#00FFFFFF"
-        android:src="@drawable/ic_menu"
+        android:src="@drawable/ic_bell"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
