--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -26,8 +26,7 @@
             android:layout_marginStart="10dp"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/montserrat"/>
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
