--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -23,7 +23,6 @@
             android:layout_marginTop="15dp"
             android:textSize="18sp"
             android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
             android:text="@string/cart" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -48,7 +47,6 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
-        android:fontFamily="@font/montserrat"
         android:text="@string/empty" />
 
     <Button
@@ -61,7 +59,6 @@
         android:visibility="gone"
         android:text="@string/add"
         android:layout_gravity="bottom"
-        android:textColor="@color/white"
-        android:fontFamily="@font/montserrat"/>
+        android:textColor="@color/white"/>
 
 </FrameLayout>
