--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -22,7 +22,6 @@
             android:layout_marginTop="15dp"
             android:textSize="18sp"
             android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
             android:text="@string/favorites" />
 
         <LinearLayout
@@ -44,8 +43,7 @@
                 android:text="@string/back"
                 android:textSize="16sp"
                 android:layout_gravity="center"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"/>
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
@@ -75,8 +73,7 @@
                 android:textSize="16sp"
                 android:layout_weight="0.5"
                 android:layout_gravity="center"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"/>
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/total"
@@ -85,8 +82,7 @@
                 android:text="@string/price"
                 android:textSize="16sp"
                 android:layout_gravity="center"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"/>
+                android:textColor="@color/black"/>
 
         </LinearLayout>
 
@@ -97,7 +93,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
             android:textSize="20sp"/>
 
         <!--<androidx.recyclerview.widget.RecyclerView
@@ -119,7 +114,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
             android:textSize="20sp"/>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -141,7 +135,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
             android:textSize="20sp"/>
 
         <!--<androidx.recyclerview.widget.RecyclerView
@@ -163,7 +156,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"
             android:textSize="20sp"/>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -185,8 +177,7 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginVertical="15dp"
             android:text="@string/confirm"
-            android:textColor="@color/white"
-            android:fontFamily="@font/montserrat"/>
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
