--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -26,8 +26,7 @@
             android:text="@string/back"
             android:textSize="16sp"
             android:layout_gravity="center"
-            android:textColor="@color/black"
-            android:fontFamily="@font/montserrat"/>
+            android:textColor="@color/black"/>
 
     </LinearLayout>
 
@@ -43,7 +42,6 @@
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:gravity="center"
-            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="25sp"/>
 
@@ -58,7 +56,6 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -78,7 +75,6 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -97,7 +93,6 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -116,7 +111,6 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -135,7 +129,6 @@
                 android:id="@+id/lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -154,7 +147,6 @@
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -170,7 +162,6 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/action_button"
-            android:fontFamily="@font/montserrat"
             android:text="@string/register"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -191,7 +182,6 @@
             android:layout_height="wrap_content"
             android:text="@string/already"
             android:gravity="center"
-            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="15sp"/>
 
@@ -201,7 +191,6 @@
             android:layout_height="wrap_content"
             android:text="@string/login_u"
             android:gravity="center"
-            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="18sp"/>
 
@@ -221,7 +210,6 @@
             android:layout_height="wrap_content"
             android:text="@string/havent"
             android:gravity="center"
-            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="15sp"/>
 
@@ -231,7 +219,6 @@
             android:layout_height="wrap_content"
             android:text="@string/register_u"
             android:gravity="center"
-            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="18sp"/>
 
@@ -250,7 +237,6 @@
             android:layout_height="wrap_content"
             android:text="@string/login"
             android:gravity="center"
-            android:fontFamily="@font/montserrat"
             android:textColor="@color/black"
             android:textSize="25sp"/>
 
@@ -265,7 +251,6 @@
                 android:id="@+id/username_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -284,7 +269,6 @@
                 android:id="@+id/password_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:layout_marginHorizontal="15dp"
@@ -300,7 +284,6 @@
             android:layout_marginTop="20dp"
             android:text="@string/login"
             android:textColor="@color/white"
-            android:fontFamily="@font/montserrat"
             android:textAllCaps="false"
             android:layout_marginHorizontal="15dp"/>
 
