--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -16,8 +16,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:textSize="18sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat"/>
+        android:textColor="@color/black"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_category"
@@ -40,7 +39,6 @@
         android:visibility="gone"
         android:textColor="@color/black"
         android:layout_gravity="center"
-        android:fontFamily="@font/montserrat"
         android:text="@string/empty_result" />
 
     <ProgressBar
