--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -40,8 +40,7 @@
                     android:text="@string/back"
                     android:textSize="16sp"
                     android:layout_gravity="center"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/montserrat"/>
+                    android:textColor="@color/black"/>
 
             </LinearLayout>
 
@@ -76,7 +75,6 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="15dp"
                 android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"
                 android:textSize="20sp"/>
 
             <TextView
@@ -88,7 +86,6 @@
                 android:layout_marginBottom="15dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:fontFamily="@font/montserrat"
                 android:textSize="20sp"/>
 
             <!-- <View
@@ -103,7 +100,6 @@
                  android:text="@string/color"
                  android:layout_marginStart="15dp"
                  android:textColor="@color/black"
-                 android:fontFamily="@font/montserrat"
                  android:textSize="20sp"/>
 
              <androidx.recyclerview.widget.RecyclerView
@@ -124,7 +120,6 @@
                  android:layout_marginStart="15dp"
                  android:layout_marginTop="10dp"
                  android:textColor="@color/black"
-                 android:fontFamily="@font/montserrat"
                  android:textSize="20sp"/>
 
              <androidx.recyclerview.widget.RecyclerView
@@ -150,8 +145,7 @@
                 android:background="@drawable/action_button"
                 android:layout_marginHorizontal="15dp"
                 android:text="@string/add"
-                android:textColor="@color/white"
-                android:fontFamily="@font/montserrat"/>
+                android:textColor="@color/white"/>
 
             <!--<androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_info"
@@ -176,7 +170,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="15dp"
-                android:fontFamily="@font/montserrat"
                 android:text="@string/app_name"
                 android:textColor="@color/grey_text"
                 tools:ignore="TextContrastCheck" />
