--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,43 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background"
+    android:padding="5dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:fontFamily="@font/montserrat"
+        android:layout_marginStart="10dp"
         android:text="@string/app_name"
+        android:layout_gravity="center"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold"/>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
         app:queryHint="@string/want_find"
         style="@style/CustomSearchViewStyle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_weight="0.5"
         app:iconifiedByDefault="false"
         android:searchHintIcon="@drawable/ic_search"
         android:searchIcon="@drawable/ic_search"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/notification"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent"
         app:searchHintIcon="@drawable/ic_search"
         app:searchIcon="@drawable/ic_search" />
 
@@ -45,13 +39,9 @@
         android:id="@+id/notification"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginVertical="10dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="10dp"
         android:backgroundTint="#00FFFFFF"
         android:src="@drawable/ic_bell"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
