--- a/app/src/main/res/layout/item_characteristic.xml
+++ b/app/src/main/res/layout/item_characteristic.xml
@@ -11,15 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:text="@string/app_name"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat"/>
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:fontFamily="@font/montserrat"
         android:text="@string/app_name"
         android:textColor="@color/grey_text"
         tools:ignore="TextContrastCheck" />
