--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,14 @@
 
     </style>
 
-    <style name="Theme.TechStore" parent="AppTheme" />
+    <style name="Theme.TechStore" parent="AppTheme">
+
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/black</item>
+        <item name="fontFamily">@font/montserrat</item>
+
+    </style>
+
 
 </resources>
