--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -10,6 +10,7 @@
     android:layout_marginTop="10dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/placeholder"
@@ -28,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:layout_gravity="top"
-            android:layout_marginEnd="5dp"
+            android:layout_margin="10dp"
             android:textColor="@color/black"/>
 
         <FrameLayout
@@ -41,14 +42,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/price"
+                android:layout_margin="10dp"
                 android:layout_gravity="center_vertical"
                 android:textStyle="bold"
                 android:textColor="@color/black"/>
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="5dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="10dp"
                 android:layout_height="wrap_content">
 
                 <ImageButton
@@ -80,7 +82,7 @@
                     android:src="@drawable/ic_minus"
                     tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-            </LinearLayout>
+            </LinearLayout>-->
 
         </FrameLayout>
 
