--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -22,9 +22,10 @@
             android:layout_marginTop="15dp"
             android:textSize="18sp"
             android:textColor="@color/black"
-            android:text="@string/favorites" />
+            android:text="@string/order" />
 
         <LinearLayout
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -58,6 +59,14 @@
             tools:ignore="SpeakableTextPresentCheck"
             tools:itemCount="1"
             tools:listitem="@layout/item_cart" />
+
+        <ProgressBar
+            android:id="@+id/order_progress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/black"
+            android:secondaryProgressTint="@color/black"
+            android:indeterminateTint="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -95,7 +104,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"/>
 
-        <!--<androidx.recyclerview.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_contact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -104,8 +113,8 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
-            tools:listitem="@layout/text_input_item" />-->
+            tools:itemCount="1"
+            tools:listitem="@layout/item_input_text" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -125,7 +134,7 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
+            tools:itemCount="1"
             tools:listitem="@layout/item_select_input" />
 
         <TextView
@@ -137,7 +146,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"/>
 
-        <!--<androidx.recyclerview.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -146,8 +155,8 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
-            tools:listitem="@layout/text_input_item" />-->
+            tools:itemCount="1"
+            tools:listitem="@layout/item_input_text" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -167,10 +176,11 @@
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:ignore="SpeakableTextPresentCheck"
-            tools:itemCount="3"
+            tools:itemCount="1"
             tools:listitem="@layout/item_select_input" />
 
         <Button
+            android:id="@+id/confirm"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@drawable/action_button"
