--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -67,10 +67,7 @@
         <ProgressBar
             android:id="@+id/cart_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progressTint="@color/black"
-            android:secondaryProgressTint="@color/black"
-            android:indeterminateTint="@color/black" />
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
