--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -55,10 +55,7 @@
         <ProgressBar
             android:id="@+id/sale_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progressTint="@color/black"
-            android:secondaryProgressTint="@color/black"
-            android:indeterminateTint="@color/black" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/textView3"
@@ -85,10 +82,7 @@
         <ProgressBar
             android:id="@+id/new_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progressTint="@color/black"
-            android:secondaryProgressTint="@color/black"
-            android:indeterminateTint="@color/black" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -114,10 +108,7 @@
         <ProgressBar
             android:id="@+id/category_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progressTint="@color/black"
-            android:secondaryProgressTint="@color/black"
-            android:indeterminateTint="@color/black" />
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
