--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -63,10 +63,7 @@
         <ProgressBar
             android:id="@+id/order_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progressTint="@color/black"
-            android:secondaryProgressTint="@color/black"
-            android:indeterminateTint="@color/black" />
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
