--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -44,9 +44,6 @@
     <ProgressBar
         android:id="@+id/result_progress"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progressTint="@color/black"
-        android:secondaryProgressTint="@color/black"
-        android:indeterminateTint="@color/black" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
